# iasppt

./: CONTRIBUTING.md  PROJECT_SUMMARY.md  README.md  REQUIREMENTS.md
api-gateway/: Cargo.toml
api-gateway/src/: auth.rs  config.rs  main.rs  middleware.rs  models.rs  rate_limit.rs
api-gateway/src/handlers/: auth.rs  mod.rs  tasks.rs
compute-deai/: Cargo.toml  README.md  build.sh
compute-deai/src/: lib.rs  ref_finance_integration.rs
compute-deai/tests/: tests.rs
deployment/: mainnet-deploy.sh
deployment/docker/: Dockerfile.api-gateway
deployment/kubernetes/helm-chart/: Chart.yaml  values.yaml
deployment/monitoring/alert-rules/: deai-alerts.yaml
deployment/monitoring/grafana-dashboards/: deai-overview-dashboard.json
docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  PERFORMANCE_REPORT.md
node-client/: Cargo.toml  README.md  node_config.toml  setup.sh
node-client/ai_engine/: ai_worker.py  requirements.txt
node-client/examples/: simple_task.py
node-client/src/: ai_engine.rs  config.rs  heartbeat.rs  main.rs  near_client.rs  node_daemon.rs  task_processor.rs
node-client/tests/: integration_tests.rs
sdks/javascript/: package.json
sdks/javascript/src/: client.ts  index.ts
sdks/python/: pyproject.toml
sdks/python/deai_sdk/: __init__.py  client.py
tests/: README.md  comprehensive_integration_tests.py  integration_test.py  js_sdk_test.js  load_testing_framework.py  performance_validation.py  security_audit_framework.py
web-dashboard/: package.json
web-dashboard/src/components/: AnalyticsDashboard.tsx  MonitoringDashboard.tsx  SystemMonitoring.tsx  TaskDetail.tsx  TaskList.tsx  TaskSubmissionForm.tsx
web-dashboard/src/pages/: index.tsx
