[package]
name = "deai-api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "auth", "limit"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }
jsonwebtoken = "9.0"
bcrypt = "0.15"
validator = { version = "0.16", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
near-jsonrpc-client = "0.18"
near-primitives = "0.31"
near-crypto = "0.31"
config = "0.14"
dotenvy = "0.15"
bytes = "1.0"
futures = "0.3"
async-trait = "0.1"
dashmap = "5.5"

[dev-dependencies]
axum-test = "14.0"
tempfile = "3.8"