[package]
name = "deai-node-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
near-jsonrpc-client = "0.18"
near-primitives = "0.31"
near-crypto = "0.31"
near-jsonrpc-primitives = "0.31"
borsh = "1.5"
bs58 = "0.5"
uuid = { version = "1.0", features = ["v4"] }
config = "0.14"
dirs = "5.0"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"